@@ -12,6 +12,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+Change NO_STAT define in living.h,skillist.h,skill_util.c to NO_STAT_VAL
+to remove conflict on AIX systems. - msw
+
 Fix error in configure.in - was referancing BZIP2, when it should have
 used BZIP - msw 2/7/2000
 
